<https://bitbucket.org/birkenfeld/pygments-main/pull-requests/merged>.

Version 2.2
-----------
(in development)

- Added lexers:

  * AMPL
  * TypoScript (#1173)
  * Varnish config (PR#554)
  * Clean (PR#503)
  * WDiff (PR#513)
  * Flatline (PR#551)
  * Silver (PR#537)
  * HSAIL (PR#518)
  * JSGF (PR#546)
  * NCAR command language (PR#536)
  * Extempore (PR#530)
  * Cap'n Proto (PR#595)

- Added `lexers.find_lexer_class_by_name()`. (#1203)

- Added new token types and lexing for magic methods and variables in Python
  and PHP.

- Added a new token type for string affixes and lexing for them in Python, C++
  and Postgresql lexers.

- Added a new token type for heredoc (and similar) string delimiters and
  lexing for them in C++, Perl, PHP, Postgresql and Ruby lexers.

- Styles can now define colors with ANSI colors for use in the 256-color
  terminal formatter. (PR#531)

- Improved the CSS lexer. (#1083, #1130)


Version 2.1.2
-------------
(in development)

- Fixed Python 3 regression in image formatter (#1215)


Version 2.1.1
-------------
(relased Feb 14, 2016)

- Fixed Jython compatibility (#1205)
- Fixed HTML formatter output with leading empty lines (#1111)
- Added a mapping table for LaTeX encodings and added utf8 (#1152)
- Fixed image formatter font searching on Macs (#1188)
- Fixed deepcopy-ing of Token instances (#1168)
- Fixed Julia string interpolation (#1170)
- Fixed statefulness of HttpLexer between get_tokens calls
- Many smaller fixes to various lexers


Version 2.1
-----------
(released Jan 17, 2016)

- Added lexers:

  * Emacs Lisp (PR#431)
  * Arduino (PR#442)
  * Modula-2 with multi-dialect support (#1090)
  * Fortran fixed format (PR#213)
  * Archetype Definition language (PR#483)
  * Terraform (PR#432)
  * Jcl, Easytrieve (PR#208)
  * ParaSail (PR#381)
  * Boogie (PR#420)
  * Turtle (PR#425)
  * Fish Shell (PR#422)
  * Roboconf (PR#449)
  * Test Anything Protocol (PR#428)
  * Shen (PR#385)
  * Component Pascal (PR#437)